--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section class="primeira_sessao">
+        <section class="primeira_Sessao">
             <div>
                 <p>O inverno (AO 1945: Inverno) é a estação mais fria das quatro estações do ano e é comum que durante esta época, em países mais perto dos polos, as temperaturas fiquem abaixo de 0 ºC e que ocorram fenômenos como a queda de neve e a formação de geada. </p>
                 <p>A palavra inverno deriva do latim, hibernum, que significa neutro, invernal, invernoso, tempo frio.</p>
@@ -31,12 +31,43 @@
                 <img src="assets/inverno 1.png" alt="foto de inverno">
             </figure>
         </section>
-        <section class="segunda_sessao">
+        <section class="segunda_Sessao">
             <figure>
                 <img src="assets/gramado 1.png" alt="foto de gramado">
             </figure>
             <h2>O Inverno no Brasil  se inicia no dia 21 de junho e termina 23 de setembro</h2>
         </section>
+        <section class="terceira_Sessao">
+            <figure>
+                <img src="assets/urso_polar1.png" alt="foto de urso com filhotes">
+                <img src="assets/urso_polar2.png" alt="foto de urso olhando">
+                <img class="urso" src="assets/urso_polar3.png" alt="foto de urso rugindo">
+                <img src="assets/urso_polar4.png" alt="foto de urso na neve">
+            </figure>
+        </section>
     </main>
+    <footer>
+            <nav>
+                <figure>
+                    <a href="#">
+                        <img class="redes" src="assets/linkedin.png" alt="logo Linkedin">
+                    </a>
+                    <a href="#">
+                        <img class="redes" src="assets/instagram.png" alt="logo Instagram">
+                    </a>
+                    <a href="#">
+                        <img class="redes" src="assets/github.png" alt="logo Github">
+                    </a>
+                </nav>
+                <section>
+                    <p>Talya de Oliveira</p>
+                    <p>Nome do Instrutor(a): Carol</p>
+                    <p>Nome dos facilitadores: Grazy, Kleber</p>
+                    <p>Layout criado para fins de estudos na escola vai na web</p>
+                </section>
+                <figure>
+                    <img src="assets/pinguin.png" alt="foto de pinguin">
+                </figure>
+    </footer>
 </body>
 </html>
